fixed a overlapping issue

--- a/css/themes.css
+++ b/css/themes.css
@@ -9,6 +9,7 @@
   --menubar-bg: #05718f;
   --menubar-bg-hover: #0a7c9c;
   /* lyric game */
+  --game-bg-color: #fff;
   --game-input-bg-color: #fff;
   --game-input-text-color: #000;
   --game-input-border-color: #bbb;
